fix overflow in <pre/> tag

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,8 @@ body,
   padding: 16px;
   border-radius: 15px;
   margin-bottom: 15px;
+  max-width: 100%;
+  overflow: auto;
 }
 
 @theme {
